--- a/augment.ipynb
+++ b/augment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,13 +281,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_torch(dir_path, save_path, num, decoding=True):\n",
+    "def save_torch(dir_path, save_path, num, decoding=True, mode='train'):\n",
     "    \n",
-    "    max_len = 60\n",
+    "    max_len = 60 \n",
     "    files = os.listdir(dir_path)\n",
     "\n",
     "    max_len_list = []\n",
@@ -317,12 +317,12 @@
     "            data = data.fillna(0)\n",
     "        seq_list = []\n",
     "\n",
-    "        if len(data) < max_len * 10:\n",
+    "        if len(data) < max_len * 10:  # if data length over max length, zero padding\n",
     "            pad = pd.DataFrame(np.zeros((max_len * 10 - len(data), 8)),columns=data.columns)\n",
     "            cat_df = pd.concat([data, pad], axis=0).reset_index()\n",
     "            cat_df = cat_df.drop(['index'], axis=1)\n",
     "            \n",
-    "            for i in range(60):  # make sequence data\n",
+    "            for i in range(max_len):  # make sequence data\n",
     "                seq_list.append(torch.tensor(np.array(cat_df.iloc[i*10 : i*10 + 10,:])))\n",
     "\n",
     "            max_len_list.append(torch.stack(seq_list))\n",
@@ -353,6 +353,46 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "351"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(getfiles('./raw_train'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "108"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(getfiles('./raw_test'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "exercist_list = ['deadlift', 'pullup', 'situp', 'pushup', 'squat']"
@@ -360,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -775,11 +815,11 @@
     }
    ],
    "source": [
-    "save_torch(src_path + 'raw/', save_path_train, 30000)\n",
-    "save_torch(src_path + 'noise/', save_path_train, 30000, decoding=False)\n",
-    "save_torch(src_path + 'split/', save_path_train, 30000)\n",
-    "save_torch(src_path + 'warping/', save_path_train, 30000, decoding=False)\n",
-    "save_torch(src_path + 'all/', save_path_train, 30000)"
+    "save_torch(src_path + 'raw/', save_path_train, 1000)\n",
+    "save_torch(src_path + 'noise/', save_path_train, 1000, decoding=False)\n",
+    "save_torch(src_path + 'split/', save_path_train, 1000)\n",
+    "save_torch(src_path + 'warping/', save_path_train, 1000, decoding=False)\n",
+    "save_torch(src_path + 'all/', save_path_train, 1000)"
    ]
   },
   {
